--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img class="shiva" src="images/shiva.png" alt="Shivaram profile picture">
+        <img class="shiva" src="images/ram.png" alt="Shivaram profile picture">
         <h2>Hello.</h2>
         <p class="intro">I am Software Web Developer. I ❤️ playing cricket and internet surfing. I highly Enthusiastic to know about the latest mobile phones and electronics released in the market.</p>
       </div>
