--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p> This is the first website that I had designed and developed using my HTML5 & CSS3 skills. </p>
         </div>
         <div class="skill-row">
-          <img class="skill2" src="https://cdn-icons.flaticon.com/png/512/2817/premium/2817065.png?token=exp=1655297335~hmac=7079b198c4f0c3f9b243b5f7fc70faa6" alt=" skill2 picture">
+          <img class="skill2" src="images/skill.png" alt=" skill2 picture">
           <h3>Skill Set</h3>
           <p>HTML5, CSS3, Salesforce Administrator
             and desire to strive for improvement in current knowledge and practices.</p>
